# sodipodi-code

./: README.md
libarikkei/: CMakeLists.txt  arikkei-active-object.c  arikkei-active-object.h  arikkei-array-interface.c  arikkei-array-of.c  arikkei-array-of.h  arikkei-array.c  arikkei-array.h  arikkei-cache.c  arikkei-collection.h  arikkei-dict.c  arikkei-dict.h  arikkei-function-object.h  arikkei-function.c  arikkei-function.h  arikkei-interface.c  arikkei-interface.h  arikkei-iolib.c  arikkei-iolib.h  arikkei-object.c  arikkei-object.h  arikkei-property.c  arikkei-property.h  arikkei-reference.c  arikkei-reference.h  arikkei-string.c  arikkei-string.h  arikkei-strlib.c  arikkei-strlib.h  arikkei-threads.h  arikkei-token.c  arikkei-token.h  arikkei-types.c  arikkei-types.h  arikkei-url.c  arikkei-url.h  arikkei-utils.h  arikkei-value-array.c  arikkei-value-array.h  arikkei-value.c  (+9 more)
libnr/: CMakeLists.txt  README  have_mmx.S  libnr.vcproj  libnr.vcxproj  libnr.vcxproj.filters  nr-blit.c  nr-blit.h  nr-compose-transform.c  nr-compose.c  nr-compose.h  nr-forward.h  nr-gradient.c  nr-gradient.h  nr-image.c  nr-image.h  nr-object.c  nr-object.h  nr-path.c  nr-path.h  nr-pathops.c  nr-pathops.h  nr-pixblock-compose.c  nr-pixblock-compose.h  nr-pixblock-line.c  nr-pixblock-pattern.c  nr-pixblock-pattern.h  nr-pixblock-pixel.h  nr-pixblock-transform.c  nr-pixblock.c  nr-pixblock.h  nr-pixops.h  nr-rect.c  nr-rect.h  nr-render.h  nr-stroke.c  nr-stroke.h  nr-svp-render.c  nr-svp-render.h  nr-types.h  (+5 more)
libnrarena/: libnrarena.vcproj  nr-arena-forward.h  nr-arena-glyphs.c  nr-arena-group.c  nr-arena-group.h  nr-arena-image.c  nr-arena-image.h  nr-arena-item.c  nr-arena-item.h  nr-arena-painter.c  nr-arena-painter.h  nr-arena-shape.c  nr-arena-shape.h  nr-arena-style.c  nr-arena-style.h  nr-arena.c
libnrtype/: codepages.h  cp1250.c  cp1251.c  cp1252.c  cp1253.c  cp1257.c  cp932.c  cp936.c  cp950.c  libnrtype.vcproj  nr-font.c  nr-glyphs.c  nr-type-directory.c  nr-type-directory.h  nr-type-gnome.h  nr-type-primitives.c  nr-type-primitives.h  nr-type-w32.c  nr-type-xft.h  nr-typeface.c  nr-typeface.h
libsodipodi/: attributes.h  config.h  factory.h  image-loaders.c  marshal.h  preferences.h  print.c  print.h  sodipodi.h  sp-anchor.c  sp-anchor.h  sp-animation.c  sp-animation.h  sp-chars.c  sp-chars.h  sp-clippath.c  sp-clippath.h  sp-defs.c  sp-defs.h  sp-ellipse.h  sp-item-group.h  sp-item.c  sp-linear-gradient.h  sp-marker.h  sp-object-group.c  sp-paint-server.c  sp-pattern.c  sp-pattern.h  sp-radial-gradient.h  sp-rect.c  sp-rect.h  sp-root.h  sp-shape.c  sp-star.c  sp-text.h  style.c  units.c  uri-references.h  url.h
libsodipodi/svg/: svg-length.c  svg-types.h  svg.h
libsodipodiui/: CMakeLists.txt  action.c  button.c  button.h  color.h  font-selector.c  font-selector.h  icon.c  icon.h  interface.c  libsodipodiui.vcproj  libsodipodiui.vcxproj  libsodipodiui.vcxproj.filters  menu.h  shortcuts.c  shortcuts.h  sp-color-preview.c  sp-color-preview.h  sp-color-selector.h  sp-color-slider.h  sp-marshal.h  sp-marshal.list
sodipodi-flags/: CREDITS  README  ReleaseNotes10  create_flagtarball.sh  gen_cc.pl  generate.sh  missingflags.txt
sodipodi-flags/3x2/: README
sodipodi-web/: ChangeLog  index.php3  meta  sodipodi.css  style.php3
thera/: CMakeLists.txt  io.cpp  thera-document.cpp  thera-document.h  thera-node.cpp  thera-node.h  thera.cpp  thera.h  thera.vcproj  thera.vcxproj  thera.vcxproj.filters  transaction.cpp  transaction.h
trunk/libnrtype/: CMakeLists.txt  cp1254.c  cp1255.c  cp1256.c  cp1258.c  cp874.c  cp949.c  libnrtype.vcproj  libnrtype.vcxproj  libnrtype.vcxproj.filters  nr-font.c  nr-glyphs.h  nr-rasterfont.c  nr-type-w32.c  nr-type-w32.h  nr-type-xft.c  nr-typeface.c  nr-typeface.h
trunk/libsodipodiui/: CMakeLists.txt  action.c  action.h  button.c  color.c  font-selector.c  font-selector.h  icon.c  icon.h  interface.c  interface.h  libsodipodiui.vcproj  menu.c  shortcuts.c  sp-color-selector.c  sp-color-selector.h  sp-color-slider.c  sp-marshal.c
(+1027 files in other folders)
